--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.READ_PROFILE"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
 
     <application
         android:allowBackup="true"
@@ -28,6 +30,8 @@
             android:windowSoftInputMode="adjustPan"
             android:name=".activity.SignUpActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
+
+        <activity android:name=".activity.TimeLineActivity"/>
 
     </application>
 
