--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile "com.google.firebase:firebase-auth:9.0.2"
+    compile 'com.android.support:recyclerview-v7:24.0.0'
+    compile 'com.android.support:gridlayout-v7:24.0.0'
+    compile 'com.android.support:cardview-v7:24.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
