--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 
     <application
@@ -34,7 +36,10 @@
 
         <activity android:name=".activity.TimeLineActivity"/>
         <activity android:name=".activity.CreatePostActivity"
+                  android:screenOrientation="portrait"
                   android:theme="@style/AppTheme.NoActionBar.NoTranslucent"/>
+        <activity android:name=".activity.SelectImageActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
     </application>
 
