--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     compile 'com.roughike:bottom-bar:1.3.9'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
+
+    compile 'com.aurelhubert:ahbottomnavigation:2.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
