--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'com.android.support:gridlayout-v7:24.2.1'
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.roughike:bottom-bar:1.3.9'
+    testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
@@ -48,6 +49,7 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.aurelhubert:ahbottomnavigation:2.0.1'
     compile "com.daimajia.swipelayout:library:1.2.0@aar"
+    compile 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
