--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/MAP_API_KEY" />
 
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".activity.DetailActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -53,6 +53,6 @@
             android:name=".activity.SelectImageActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activity.CommentActivity" />
-        <activity android:name=".activity.DetailActivity" />
+        <activity android:name=".activity.MainActivity" />
     </application>
 </manifest>
