--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     compile 'com.google.firebase:firebase-core:9.8.0'
     compile 'com.google.firebase:firebase-auth:9.8.0'
     compile 'com.google.firebase:firebase-database:9.8.0'
-    compile 'com.firebaseui:firebase-ui:0.4.3'
+    compile 'com.firebaseui:firebase-ui:0.6.2'
 
     // Google
     compile 'com.google.android.gms:play-services-maps:9.8.0'
@@ -51,6 +51,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.roughike:bottom-bar:1.3.9'
+    testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
@@ -58,6 +59,7 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.aurelhubert:ahbottomnavigation:2.0.1'
     compile "com.daimajia.swipelayout:library:1.2.0@aar"
+    compile 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
