--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,11 +19,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/MAP_API_KEY" />
@@ -35,36 +33,31 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activity.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".activity.SignUpActivity"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustPan" />
-        
         <activity
             android:name=".activity.CreatePostActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar.NoTranslucent" />
-
         <activity
             android:name=".activity.SelectImageActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".activity.ViewAndEditProfile"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".activity.CommentActivity"
             android:theme="@style/AppTheme.NoActionBar.NoTranslucent" />
-
         <activity
             android:name=".activity.DetailActivity"
             android:theme="@style/AppTheme.NoActionBar.NoTranslucent" />
+        <activity android:name=".activity.PhotoActivity"></activity>
     </application>
+
 </manifest>
